<package>
  <name>hrl_pr2_ar_servo</name>
  <version>0.0.0</version>
  <description>hrl_pr2_ar_servo</description>
  <maintainer email="">Kelsey Hawkins</maintainer>
  <maintainer email="">Advisor: Prof. Charlie Kemp</maintainer>
  <maintainer email="">Lab: Healthcare Robotics Lab </maintainer>

  <license>New BSD</license>

  <url type="website">http://ros.org/wiki/hrl_pr2_ar_servo</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kelsey Hawkins</author>
  <author>Advisor: Prof. Charlie Kemp</author>
  <author>Lab: Healthcare Robotics Lab </author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pykdl_utils</build_depend>
  <build_depend>ar_pose</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pykdl_utils</run_depend>
  <run_depend>ar_pose</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>image_geometry</test_depend> -->
  <!-- <test_depend>tf_conversions</test_depend> -->
  <!-- <test_depend>pykdl_utils</test_depend> -->
  <!-- <test_depend>ar_pose</test_depend> -->

</package>