<package>
  <name>hrl_pr2_ar_servo</name>
  <version>0.0.0</version>
  <description>hrl_pr2_ar_servo</description>
  <maintainer email="phillip.grice@gatech.edu">Phillip Grice</maintainer>

  <license>New BSD</license>

  <url type="website">http://ros.org/wiki/hrl_pr2_ar_servo</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kelsey Hawkins</author>
  <author email="phillip.grice@gatech.edu">Phillip Grice</author>
  <author>Advisor: Prof. Charlie Kemp</author>
  <author>Lab: Healthcare Robotics Lab</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>image_geometry</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pykdl_utils</build_depend>
  <build_depend>ar_track_alvar</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>image_geometry</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pykdl_utils</run_depend>
  <run_depend>ar_track_alvar</run_depend>

</package>
