<?xml version="1.0"?>
<package>
<name>hrl_pr2_behaviors</name>
<version>0.0.0</version>
<description>
    hrl_pr2_behaviors contains various semi-autonomous behavior modules for the PR2 robot.
</description>
  <maintainer email="phillip.grice@gatech.edu">Phillip Grice</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrl_pr2_behaviors</url>

  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>
  <author email="phillip.grice@gatech.edu">Phillip Grice</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hrl_pr2_arms</run_depend>
  <run_depend>hrl_pr2_ar_servo</run_depend>
  <run_depend>hrl_pr2_force_ctrl</run_depend>
  <run_depend>hrl_pr2_tool_grasp</run_depend>
  <run_depend>hrl_pr2_traj_playback</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <!-- You can specify that this package is a metapackage here: -->
      <metapackage/>
      <!-- Other tools can request additional information be placed here -->
  </export>
</package>
