<package>
  <name>hrl_pr2_force_ctrl</name>
  <version>0.0.0</version>
  <description>hrl_pr2_force_ctrl</description>
  <maintainer email="phillip.grice@gatech.edu">Phillip Grice</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrl_pr2_force_ctrl</url>

  <author>Kelsey Hawkins</author>
  <author>Advisor: Charles C. Kemp</author>
  <author>Lab: Healthcare Robotics Lab at Georgia Tech</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>hrl_pr2_arms</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>rosrt</build_depend>
  <build_depend>pr2_manipulation_controllers</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hrl_pr2_arms</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>rosrt</run_depend>
  <run_depend>pr2_manipulation_controllers</run_depend>

<export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
</export>

</package>
