<package>
  <name>hrl_pr2_traj_playback</name>
  <version>0.0.0</version>
  <description>For recording and playing back trajectories safely.</description>
  <maintainer email="phillip.grice@gatech.edu">Phillip Grice</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrl_pr2_traj_playback</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kelsey Hawkins</author>
  <author email="phillip.grice@gatech.edu">Phillip Grice</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>hrl_pr2_arms</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>hrl_pr2_arms</run_depend>

</package>
